# vocal-fx

./: Cargo.toml  bundler.toml
common/: Cargo.toml
common/src/: biquad.rs  envelope.rs  lib.rs  ring_buffer.rs
plugins/compressor/: Cargo.toml
plugins/compressor/src/: lib.rs
plugins/delay/: Cargo.toml
plugins/delay/src/: lib.rs
plugins/eq/: Cargo.toml
plugins/eq/src/: lib.rs
plugins/gain/: Cargo.toml
plugins/gain/src/: lib.rs
plugins/gate/: Cargo.toml
plugins/gate/src/: lib.rs
plugins/harmony/: Cargo.toml
plugins/harmony/src/: detector.rs  lib.rs  shifter.rs
plugins/reverb/: Cargo.toml
plugins/reverb/src/: lib.rs
