[package]
name = "harmony"
version = "0.1.0"
edition = "2021"
authors = ["Gil Lund"]
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
vocal-fx-common = { path = "../../common" }
pitch-detection = "0.3"
tdpsola = "0.1"
